[package]
name = "hiob"
description = "Hyperplane Independence Optimized Binarization"
version = "0.1.0"
edition = "2021"

[lib]
name = "hiob"
crate-type = ["cdylib"]
path = "src/pybridge.rs"
test = true
doc = true

[dependencies]
num = "0.4.0"
numpy = "0.18.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
indicatif = {version="0.17.3", optional=true}
hdf5 = {version="0.8.1", optional=true}
futures = "0.3.28"
paste = "1.0.12"
pyo3 = {version="0.18.3", features=["auto-initialize", "multiple-pymethods"]}
rayon = {version="1.7.0", optional=true}
probability = {version="0.20.3"}
half = {version="2.2.1", optional=true, features=["num-traits"]}

[features]
default = ["parallel", "half"]
progressbars = ["dep:indicatif"]
parallel = ["dep:rayon"]
rust-hdf5 = ["dep:hdf5"]
half = ["dep:half", "numpy/half"]

[profile.profiling]
inherits = "release"
opt-level = 3
debug = true
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


